# mcp-luciana

./: README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml  test_debug.py
output/functional/resources/: karate-config.js
output/functional/resources/features/: DELETE_priorities_id.feature  GET_priorities.feature  GET_priorities_id.feature  POST_priorities.feature  PUT_priorities_id.feature  deletePrioritiesId.feature  getPolizasNumeropolizaDescargar.feature  getPriorities.feature  getPrioritiesId.feature  postPriorities.feature  (+1 more)
output/swagger/: apiSpDocumentospolizasalud.json  gestiónDePrioridadesApi.json  gestión_de_prioridades_api_20251125_194956.json
output/test_cases/: DELETEprioritiesid20251125_195703.json  DELETEprioritiesid20251125_203939.json  GETpriorities20251125_195703.json  GETpriorities20251125_203939.json  GETprioritiesid20251125_195703.json  GETprioritiesid20251125_203939.json  POSTpriorities20251125_195703.json  POSTpriorities20251125_203939.json  PUTprioritiesid20251125_195703.json  PUTprioritiesid20251125_203939.json  deletePrioritiesId.json  getPolizasNumeropolizaDescargar.json  getPriorities.json  getPrioritiesId.json  postPriorities.json  putPrioritiesId.json
src/presentation/: __init__.py  mcp_server.py
src/shared/: config.py  constants.py  logging_config.py
src/shared/mappers/: swagger_mapper.py  test_case_mapper.py
src/shared/utils/: __init__.py  file_operations.py  result_aggregator.py
src/tools/: __init__.py  mcp_tools.py
src/tools/karate_generation/: __init__.py
src/tools/test_generation/: __init__.py
(+74 files in other folders)
